# rubriks_cube

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  ruff.toml
configs/: example_config.jsonnet  mistral.jsonnet
data/: hellaswag.jsonl  logic.jsonl  race.jsonl  wandi.jsonl
data/annotation_set/: annotation_set.json
data/evaluation_set/: evaluation_set.json
datasets/: README.md  __init__.py  base.py  hellaswag.py  logic.py  race.py  wandi.py
templates/hellaswag/: explanation_judgement.j2.md  prediction_task.j2.md
templates/logic/: README.md  explanation_judgement.j2.md  prediction_task.j2.md
templates/race/: README.md  explanation_judgement.j2.md  prediction_task.j2.md
templates/wandi/: README.md  explanation_judgement.j2.md  prediction_task.j2.md
tests/: test_hellaswag_dataset.py
